<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.todayrecord.todayrecord.util.TimeUtil" />

        <variable
            name="viewModel"
            type="com.todayrecord.todayrecord.screen.setting.alarm.AlarmViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screen.setting.alarm.AlarmFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/tl_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:menu="@menu/menu_save"
                app:navigationIcon="@drawable/icon_back"
                app:title="">

                <TextView
                    style="@style/Widget.TodayRecord.TextView.Body2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/alarm_setting_title"
                    android:textColor="@color/color_474a54" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true">

                <FrameLayout
                    android:id="@+id/fl_permission_enable"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@color/color_43588c"
                    android:padding="12dp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:onSingleClick="@{()-> viewModel.navigateToSystemSetting()}"
                    tools:visibility="visible">

                    <TextView
                        style="@style/Widget.TodayRecord.TextView.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/alarm_setting_permission_approve"
                        android:textColor="@android:color/white"
                        android:textStyle="bold" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:divider="@drawable/divider_line"
                    android:orientation="vertical"
                    android:showDividers="middle|end"
                    android:splitMotionEvents="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fl_permission_enable">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_alarm_time"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        android:background="?selectableItemBackground"
                        android:paddingStart="24dp"
                        android:paddingEnd="14dp"
                        app:onSingleClick="@{()-> viewModel.navigateToTimePicker()}">

                        <TextView
                            android:id="@+id/tv_time_title"
                            style="@style/Widget.TodayRecord.TextView.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_setting_time"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            style="@style/Widget.TodayRecord.TextView.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{TimeUtil.getTimeFormatString(viewModel.alarmTime , @string/time_regex_half_time_colon)}"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="@id/tv_time_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@id/tv_time_title"
                            app:layout_constraintTop_toTopOf="@id/tv_time_title"
                            tools:text="오전 10:00" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_alarm_comment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        android:paddingStart="24dp"
                        android:paddingEnd="14dp">

                        <TextView
                            android:id="@+id/tv_comment_title"
                            style="@style/Widget.TodayRecord.TextView.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_setting_message"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/et_comment"
                            app:layout_constraintHorizontal_chainStyle="spread_inside"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/et_comment"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:layout_marginStart="12dp"
                            android:background="@android:color/transparent"
                            android:ellipsize="end"
                            android:gravity="end"
                            android:hint="@string/alarm_setting_message_hint"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:selectAllOnFocus="true"
                            android:text="@{viewModel.alarmMessage}"
                            android:textAppearance="@style/TextAppearance.TodayRecord.Body2"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="@id/tv_comment_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@id/tv_comment_title"
                            app:layout_constraintTop_toTopOf="@id/tv_comment_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/cl_enable_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/setting_height"
                        android:background="?selectableItemBackground"
                        android:paddingStart="24dp"
                        android:paddingEnd="14dp"
                        app:onSingleClick="@{()-> viewModel.setAlarmEnable(!viewModel.alarmEnabled)}">

                        <TextView
                            android:id="@+id/tv_enable_title"
                            style="@style/Widget.TodayRecord.TextView.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alarm_setting_enable"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            style="@style/Widget.TodayRecord.TextView.Body2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{viewModel.alarmEnabled ? @string/alarm_setting_enable_on : @string/alarm_setting_enable_off}"
                            android:textColor="@color/color_474a54"
                            app:layout_constraintBottom_toBottomOf="@id/tv_enable_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="1"
                            app:layout_constraintStart_toEndOf="@id/tv_enable_title"
                            app:layout_constraintTop_toTopOf="@id/tv_enable_title"
                            tools:text="@string/alarm_setting_enable_off" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>